[package]
name = "led_control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
chrono = "0.4.38"
cron = "0.12.1"
csscolorparser = "0.6.2"
futures = "0.3.30"
lazy_static = "1.4.0"
rocket = "0.5.0"
serde = "1.0.198"
serde_yaml = "0.9.34"
tokio = "1.37.0"
